# nextbus

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  bootstrap.sh
.github/workflows/: ci.yaml
src/: client.rs  location.rs  main.rs  prediction.rs  routes.rs  schedule.rs  stops.rs
