[package]
name = "nextbus"
version = "0.1.0"
authors = ["Shahin Saneinejad <shahin.saneinejad@gmail.com>"]
build = "build.rs"

[dependencies]
reqwest = "0.8.6"
log = "0.4.0"
env_logger = "0.5.10"
error-chain = "0.12.0"
serde = "1.0.69"
serde_derive = "1.0.69"
serde-xml-rs = "0.2.1"
serde_json = "1.0"
clap = "2.32.0"

[build-dependencies]
vergen = "2"
